gccida/c1/inc_for_reload
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/inc_for_reload/src/reload1.c:8378:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)value->fld[0]; 
                      ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/inc_for_reload/src/reload1.c:8403:31: error: use of undeclared identifier 'machine_mode'
v14 = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( unsigned __int8 *)( v6.rtwint + 2), v6.rtx, arg1); 
                              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/inc_for_reload/src/obj/reload1.o] Error 1
